# yet_another_game_engine

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  generate_project_files.bat
content/: basicVertexShader.glsl
content/assets/: arrows_mesh.json  basic_mat.json  basic_mesh.json  basic_texture.json  debug_mesh.json
content/assets/materials/: basic_mat.json  black.json  brown.json  default_mat.json  sky_mat.json  white.json
content/assets/meshes/: arrows_mesh.json  asteroid_mesh.json  basic_mesh.json  bullet_mesh.json  cube_mesh.json  debug_mesh.json  ship_mesh.json  sky_mesh.json
content/assets/shaders/: basic_shader.json  default_shader.json
content/assets/textures/: sky_texture.json
content/data/: basicFragmentShader.glsl  ship.mtl
content/data/shaders/: basicFragmentShader.glsl  basic_shader_frag.glsl  basic_shader_vert.glsl  black_frag.glsl  default_frag.glsl  white_frag.glsl
src/: CMakeLists.txt  bullet_HelloWorld.hpp  main.cpp  test.h  test.hpp
src/assetmanager/: CMakeLists.txt  assetloaders.cpp  assetloaders.h  assetmanager.h  assetptr.h  staticmeshloader.cpp
src/assetmanager/loaders/: CMakeLists.txt  obj_loader.cpp  obj_loader.h  stb_image.c
src/core/: CMakeLists.txt  color.h  core.h  delegate.h  guid.h  input.h  log.h  math.cpp  math.h  matrix.cpp  matrix.h  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  paths.h  quaternion.h  string.h  transform.h  vector.h  vector2.h  vector3.h  vector4.h
src/game/: CMakeLists.txt  game.hpp  physics_test_game.hpp
src/game/entities/: CMakeLists.txt  asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  physicscube.cpp  physicscube.h  player.cpp  player.h  sky.cpp  sky.h
src/game_framework/: CMakeLists.txt  entity.h  scene.h
src/gameframework/: entity.cpp  entity.h  scene.cpp  scene.h
src/physicscore/: CMakeLists.txt  bt_helpers.h  physicscore.h  physicsscene.cpp  physicsscene.h  physicstypes.h  rigidbody.cpp  rigidbody.h
src/physicscore/collisionshapes/: CMakeLists.txt  boxshape.cpp  boxshape.h  capsuleshape.h  collisionshape.h  collisionshapes.h  sphereshape.h
src/platform/: CMakeLists.txt  platform.cpp  platform.h  platforminput.cpp  platforminput.h  platformwindow.h  window.h
src/platform/glfw/: CMakeLists.txt  glfwinput.cpp  glfwinput.h  glfwplatform.cpp  glfwplatform.h  glfwwindow.cpp  glfwwindow.h
src/rendercore/: CMakeLists.txt  material.cpp  material.h  rendercore.h  shader.cpp  shader.h  staticmesh.cpp  staticmesh.h  texture.cpp  texture.h  vertex.h  viewport.cpp  viewport.h
src/rendercore/opengl/: CMakeLists.txt  gl_material.cpp  gl_material.h  gl_shader.cpp  gl_shader.h  gl_staticmesh.cpp  gl_staticmesh.h  gl_texture.cpp  gl_texture.h  gl_viewport.cpp  gl_viewport.h
src/tavla/: CMakeLists.txt  tavla.cpp  tavla.h  tavlaapplication.cpp  tavlaapplication.h  tavlacontent.h  tavlaviewport.cpp  tavlaviewport.h  tavlawindow.cpp  tavlawindow.h  twindow.h
src/tavla/primitives/: horizontalbox.cpp  horizontalbox.h  verticalbox.cpp  verticalbox.h
